page z-index fix

--- a/page.css
+++ b/page.css
@@ -149,6 +149,7 @@ body{
 	box-sizing:border-box;
 	/*border-bottom:10px solid black;*/
 	background-color: white;
+	z-index: 1;
 }
 
 .page1{
